src/lib/snapshots/hemlis_lib__lexer__tests__some_tokens.snap
---
source: src/lexer.rs
expression: "p(\"module A where (a, b, c)\\nimport B as B\\nfoo = 1 + B.t\")"
---
Ok(Lower("module"))
Ok(Upper("A"))
Ok(Where)
Ok(LeftParen)
Ok(Lower("a"))
Ok(Comma)
Ok(Lower("b"))
Ok(Comma)
Ok(Lower("c"))
Ok(RightParen)
Ok(LayTop)
Ok(Lower("import"))
Ok(Upper("B"))
Ok(Lower("as"))
Ok(Upper("B"))
Ok(LayTop)
Ok(Lower("foo"))
Ok(Equals)
Ok(Number("1"))
Ok(Op("+"))
Ok(Qual("B."))
Ok(Lower("t"))
Ok(LayTop)
