src/lib/snapshots/hemlis_lib__lexer__tests__string.snap
---
source: src/lexer.rs
expression: "p(r#\"\"I like pie\"\"#)"
---
Ok(String("\"I like pie\""))
Ok(LayTop)
