src/lib/snapshots/hemlis_lib__lexer__tests__string_hex.snap
---
source: src/lexer.rs
expression: "p(r#\"\"\\x00a0\"\"#)"
---
Ok(String("\"\\x00a0\""))
Ok(LayTop)
