src/lib/snapshots/hemlis_lib__lexer__tests__string_with_break_and_escapes.snap
---
source: src/lexer.rs
expression: "p(r#\"\"\\\n            \\\\\"\"\"#)"
---
Ok(String("\"\\\n            \\\\\"\""))
Ok(LayTop)
