src/lib/snapshots/hemlis_lib__lexer__tests__string_with_quote.snap
---
source: src/lexer.rs
expression: "p(r#\"\"Qotes are \\\"rad\\\"\"\"#)"
---
Ok(String("\"Qotes are \\\"rad\\\"\""))
Ok(LayTop)
