src/lib/snapshots/hemlis_lib__lexer__tests__swedish_upper.snap
---
source: src/lexer.rs
expression: "p(\"Överförning\")"
---
Ok(Upper("Överförning"))
Ok(LayTop)
