src/lib/snapshots/hemlis_lib__lexer__tests__tricky_do_notation.snap
---
source: src/lexer.rs
expression: "p(r#\"\nf = \n    do\n        do\n            a <- f b\n            do\n                x <- y\n        e v\n\nfoo = bar + baz\n        \"#)"
---
Ok(LayTop)
Ok(Lower("f"))
Ok(Equals)
Ok(Do)
Ok(LayBegin)
Ok(Do)
Ok(LayBegin)
Ok(Lower("a"))
Ok(LeftArrow)
Ok(Lower("f"))
Ok(Lower("b"))
Ok(LaySep)
Ok(Do)
Ok(LayBegin)
Ok(Lower("x"))
Ok(LeftArrow)
Ok(Lower("y"))
Ok(LayEnd)
Ok(LayEnd)
Ok(LaySep)
Ok(Lower("e"))
Ok(Lower("v"))
Ok(LayEnd)
Ok(LayTop)
Ok(Lower("foo"))
Ok(Equals)
Ok(Lower("bar"))
Ok(Op("+"))
Ok(Lower("baz"))
Ok(LayTop)
